--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 9: Breno Furtado Rosado</title>
+    <title>DCC202 - Atividade 9: Breno Furtado Rosado</title>
 </head>
 <body>
     <main>
-        <h1>Atividade 9: Breno Furtado Rosado</h1>
+        <h1>DCC202 - Atividade 9: Breno Furtado Rosado</h1>
         <p></p>
     </main>
     <script>
